--- a/src/lambda-functions/lambda-functions.yaml
+++ b/src/lambda-functions/lambda-functions.yaml
@@ -40,6 +40,7 @@ Resources:
 
   PatientFunctions:
     Type: AWS::CloudFormation::Stack
+    DependsOn: MyApi
     Properties:
       TemplateURL: patient/patient.yaml
       Parameters:
@@ -51,7 +52,7 @@ Resources:
         Username: !Ref Username
         Password: !Ref Password
         PyMySQLLayerArn: !Ref PyMySQLLayerArn
-        MyApi: !GetAtt MyApi.RootResourceId
+        MyApi: !Ref MyApi
 
   # StaffFunctions:
   #   Type: AWS::CloudFormation::Stack
