--- a/src/integrated-resource/waiting-room.yaml
+++ b/src/integrated-resource/waiting-room.yaml
@@ -42,6 +42,13 @@ Resources:
       ParentId: !Ref StartTimeResource
       PathPart: "{end-time}"
 
+  EpochResource:
+    Type: "AWS::ApiGateway::Resource"
+    Properties:
+      RestApiId: !Ref Api
+      ParentId: !Ref WaitingRoomResource
+      PathPart: "{epoch}"
+
   WaittingRoomMethodGet:
     Type: "AWS::ApiGateway::Method"
     Properties:
@@ -101,6 +108,62 @@ Resources:
                     #end
                   ]
                 }
+          - StatusCode: "400"
+            SelectionPattern: '4\d{2}'
+            ResponseTemplates:
+              application/json: '{"error":"Bad request"}'
+          - StatusCode: "500"
+            SelectionPattern: '5\d{2}'
+            ResponseTemplates:
+              application/json: '{"error":"Internal server error"}'
+      MethodResponses:
+        - StatusCode: "200"
+        - StatusCode: "400"
+          ResponseModels:
+            application/json: "Error"
+        - StatusCode: "500"
+          ResponseModels:
+            application/json: "Error"
+
+  WaitingRoomMethodPut:
+    Type: "AWS::ApiGateway::Method"
+    Properties:
+      RestApiId: !Ref Api
+      ResourceId: !Ref EpochResource
+      HttpMethod: PUT
+      AuthorizationType: COGNITO_USER_POOLS
+      AuthorizerId: !Ref InteCognitoAuthorizer
+      RequestParameters:
+        method.request.path.epoch: true
+      Integration:
+        Type: AWS
+        Credentials: !Ref APIGatewayIntegreatedRoleArn
+        IntegrationHttpMethod: POST
+        Uri: !Sub "arn:aws:apigateway:${AWS::Region}:dynamodb:action/UpdateItem"
+        PassthroughBehavior: WHEN_NO_TEMPLATES
+        RequestTemplates:
+          application/json:
+            "Fn::Sub":
+              - |
+                {
+                    "TableName": "${TableName}",
+                    "Key": {
+                        "type": {"S": "w"},
+                        "epoch": {"N": "$input.params('epoch')"}
+                    },
+                    "UpdateExpression": "SET #statusAlias = :statusValue",
+                    "ExpressionAttributeNames": {
+                        "#statusAlias": "status"
+                    },
+                    "ExpressionAttributeValues": {
+                        ":statusValue": {"N": "$input.json('$.status')"}
+                    }
+                }
+              - TableName: !Ref TableName
+        IntegrationResponses:
+          - StatusCode: "200"
+            ResponseTemplates:
+              application/json: '{"message": "Update successful"}'
           - StatusCode: "400"
             SelectionPattern: '4\d{2}'
             ResponseTemplates:
