--- a/src/integrated-resource/waiting-room.yaml
+++ b/src/integrated-resource/waiting-room.yaml
@@ -59,7 +59,7 @@ Resources:
           application/json:
             "Fn::Sub":
               - |
-                #set($currentEpochTime = $context.requestTimeEpoch / 1000)
+                #set($currentEpochTime = ($context.requestTimeEpoch / 1000) + 25200)
                 #set($secondsInADay = 86400)
                 #set($startOfDayEpoch = $currentEpochTime - ($currentEpochTime % $secondsInADay))
                 #set($endOfDayEpoch = $startOfDayEpoch + $secondsInADay - 1)
